bind10-devel-20120816 released on August 16, 2012

467.	[bug]		jelte
	For configurations, allow named sets to contain lists of items.
	(Trac #2114, git 712637513505f7afb8434292ca2a98c3517dffd3)

466.	[func]		jelte
	Allow bindctl to add and remove items to and from lists
	and dicts for items of type "any". This is for easier
	configurations.
	(Trac #2184, git ad2d728d1496a9ff59d622077850eed0638b54eb)

465.	[doc]		vorner
	Improved documentation about ACLs in the Guide.
	(Trac #2066, git 76f733925b3f3560cfc2ee96d2a19905b623bfc3)

464.	[func]		jelte, muks
	libdns++: The LabelSequence class has been extended with some new
	methods.  These are mainly intended for internal development, but
	the class is public, so interested users may want to look into the
	extensions.
	(Trac #2052, git 57c61f2^..dbef0e2)
	(Trac #2053, git 1fc2b06b57a008ec602daa2dac79939b3cc6b65d)
	(Trac #2086, git 3fac7d5579c5f51b8e952b50db510b45bfa986f3)
	(Trac #2087, git 49ad6346f574d00cfbd1d12905915fd0dd6a0bac)
	(Trac #2148, git 285c2845ca96e7ef89f9158f1dea8cda147b6566)

463.	[func]		jinmei
	Python isc.dns: the Name, RRType and RRClass classes are now
	hashable.  So, for example, objects of these classes can be used
	as a dictionary key.
	(Trac #1883, git 93ec40dd0a1df963c676037cc60c066c748b3030)

462.	[build]		jreed
	BIND 10 now compiles against googletest-1.6.0 versions that are
	installed on the system as source code. For such versions, use the
	--with-gtest-source configure switch.
	(Trac #1999, git 6a26d459a40d7eed8ebcff01835377b3394a78de)

461.	[bug]		muks
	We now set g+w and g+s permissions (mode 02770) during
	installation for the BIND 10 local state directory
	($prefix/var/bind10-devel/) so that permissions to files
	and sub-directories created in that directory are inherited.
	(Trac #2171, git ab4d20907abdb3ce972172463dcc73405b3dee79)

460.	[bug]		muks
	SSHFP's algorithm and fingerprint type checks have been relaxed
	such that they will accept any values in [0,255]. This is so that